Updated slack links

--- a/index.html
+++ b/index.html
@@ -156,10 +156,14 @@
     						<dl>
     							<dt><a href="https://groups.drupal.org/chicago">Drupal Groups - Chicago</a></dt>
     							<dd>Sign up with your Drupal.org account and submit and get notified of events, job postings, trainings, and questions and discussions from group members.</dd>
-    							<dt><a href="https://slackinvite.me/to/midcamp">Slack</a></dt>
+    							<dt>Slack</dt>
     							<dd>Join the daily conversation on Slack where you can meet and connect with a variety of knowledgeable Druplers from the area.</dd>
+                                <dd><a href="https://chicagodrupal.slack.com">MidCamp Slack</a><br>
+                                    <a href="https://slackinvite.me/to/midcamp">Sign up</a></dd>
+                                <dd><a href="https://drupalchicago.slack.com">Drupal Chicago Slack</a><br>
+                                    <a href="https://slackinvite.me/to/drupalchicago">Sign up</a></dd>
     							<dt><a href="https://www.drupal.org/irc">IRC</a></dt>
-    							<dd><a href="https://www.drupal.org/irc/setting-up">Set up IRC</a> and join the conversation in #midcamp and #cadug</dd>
+    							<dd><a href="https://www.drupal.org/irc/setting-up">Set up IRC</a> and join the conversation in #midcamp, #cadug, and #cdmug</dd>
     							<dt>Social Media</dt>
     							<dd>Follow everyone you can Social Media, including:
     								<ul>
