--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     							<dd>Sign up with your Drupal.org account and submit and get notified of events, job postings, trainings, and questions and discussions from group members.</dd>
     							<dt>Slack</dt>
     							<dd>Join the daily conversation on Slack where you can meet and connect with a variety of knowledgeable Druplers from the area.</dd>
-                                <dd><a href="https://chicagodrupal.slack.com">MidCamp Slack</a><br>
-                                    <a href="https://slackinvite.me/to/midcamp">Sign up</a></dd>
-                                <dd><a href="https://drupalchicago.slack.com">Drupal Chicago Slack</a><br>
-                                    <a href="https://slackinvite.me/to/drupalchicago">Sign up</a></dd>
+                                <dd style="padding-left:2em;"><a href="https://chicagodrupal.slack.com" style="font-weight:bold;">MidCamp Slack</a><br>
+                                    <a href="https://slackinvite.me/to/midcamp">Click here and add your email to sign up for MidCamp slack.</a></dd>
+                                <dd style="padding-left:2em;"><a href="https://drupalchicago.slack.com" style="font-weight:bold;">Drupal Chicago Slack</a><br>
+                                    <a href="https://slackinvite.me/to/drupalchicago">Click here and add your email to sign up for Drupal Chicago slack.</a></dd>
     							<dt><a href="https://www.drupal.org/irc">IRC</a></dt>
     							<dd><a href="https://www.drupal.org/irc/setting-up">Set up IRC</a> and join the conversation in #midcamp, #cadug, and #cdmug</dd>
     							<dt>Social Media</dt>
