--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <meta property="og:site_name" content="Drupal Chicago" />
+        <meta property="og:website" content="company" />
+        <meta property="og:url" content="http://zoomdata.jim.local/home/" />
+        <meta property="og:title" content="Drupal Chicago" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@drupalchicago" />
+        <meta name="twitter:site:id" content="561546491" />
+        <meta name="twitter:creator" content="@drupalchicago" />
+        <meta name="twitter:creator:id" content="43211592" />
+        <meta name="twitter:url" content="http://www.drupalchicago.com" />
+        <meta name="twitter:title" content="Drupal Chicago" />
+        <meta itemprop="name" content="Drupal Chicago" />
     </head>
     <body data-spy="scroll" data-target=".main-nav">
         <section id="section-banner">
@@ -24,7 +36,7 @@
         				<h1 class="title">
     	    				<div class="line-top"></div>
     	    					Drupal Chicago
-    						<div class="line-btm"></div>	
+    						<div class="line-btm"></div>
         				</h1>
         			</div>
         		</div>
@@ -247,8 +259,18 @@
     	<script>
     		 $(".main-nav").sticky();
     	</script>
-    	<script> 
+    	<script>
             new WOW().init();
+        </script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-9711088-14', 'auto');
+          ga('send', 'pageview');
+
         </script>
     </body>
 </html>
