Added Footer message

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     			<div class="row">
     				<div class="col-md-12 text-center">
     					<p>Photos courtesy of <a href="https://www.flickr.com/photos/educowebdesign/">EDUCO Web Design</a> and <a href="https://twitter.com/mrspete">Manning P.</a></p>
+                        <p>Open an <a href="https://github.com/thejimbirch/drupalchicago/issues">issue</a>, or <a href="https://github.com/thejimbirch/drupalchicago">fork this site</a> and make a pull request to request changes.</p>
     				</div>
     			</div>
     		</div>
