updating to remove defunct groups and slacks and add current midcamp info

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     				<div class="col-md-4 col-sm-4 wow fadeInDown" data-wow-delay=".5s">
     					<div class="overview-box">
     						<h3><a href="#section-midcamp">MidCamp<br>Midwest Drupal Camp</a></h3>
-    						<p>Returning to Chicago in March of 2016, MidCamp features 4 days of Training, Sessions, Sprinting, and Community.</p>
+    						<p>Returning to Chicago in March of 2018, MidCamp features 4 days of Training, Sessions, Sprinting, and Community.</p>
     						<p><a href="#section-midcamp" class="btn btn-default featured">Midcamp ></a></p>
     					</div>
     				</div> <!-- col-md-4 end -->
@@ -115,12 +115,6 @@
     							<dd>Holds two meetups a month in Chicago, one with presentations, one with an open, discussion format.  Drupal Sprints are scheduled throughout the year.</dd>
     							<dt><a href="http://www.meetup.com/Fox-Valley-Drupal/">Fox Valley Drupal</a></dt>
     							<dd>This very active meetup groups holds different type of meetups that include presentation, co-working lab time, and social events.</dd>
-    							<dt><a href="http://www.meetup.com/Northwest-Drupal-Meetup-Group/">Northwest Drupal Meetup Group</a></dt>
-    							<dd>This group meets infrequently in Schaumburg, IL with meetups that cover Presentations, Hands-On Coaching, and Q&amp;A discussions.</dd>
-    							<dt><a href="http://www.meetup.com/vopdug/">Village of Oak Park Drupal User Group</a></dt>
-    							<dd>The Village of Oak Park Drupal User Group is a family-friendly all-ages meetup group that meets in Oak Park, Illinois whose meetups are sprints.</dd>
-    							<dt><a href="http://www.meetup.com/drupal-1/">Chicago Drupal Meet Up Group</a></dt>
-    							<dd>The original meetup group in Chicago hosts small training events once or twice a year.</dd>
     						</dl>
     					</div>
     				</div>
@@ -138,12 +132,12 @@
     			<div class="row">
     				<div class="col-md-7 col-sm-12 pull-left">
     					<div class="profile-desc wow fadeInRight">
-    						<h2 class="heading-title">MidCamp 2016<br>Midwest Drupal Camp</h2>
-    						<p>We are excited to announce that MidCamp 2016 - Midwest Drupal Camp, will be held March 17th - 20th, 2016 at University of Illinois at Chicago (UIC) Student Center West.</p>
-    						<p>For more information, please visit <a href="http://2016.midcamp.org">http://2016.midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
+    						<h2 class="heading-title">MidCamp 2018<br>Midwest Drupal Camp</h2>
+    						<p>We are excited to announce that MidCamp 2018 - Midwest Drupal Camp, will be held March 8th - 11th, 2018 at De Paul University!</p>
+    						<p>For more information, please visit <a href="http://midcamp.org">http://midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
     						<p>We hope to see you there!</p>
     						<ul>
-    							<li>Web: <a href="http://2016.midcamp.org">http://2016.midcamp.org</a></li>
+    							<li>Web: <a href="http://midcamp.org">http://midcamp.org</a></li>
     							<li>Twitter: <a href="https://twitter.com/midwestcamp">https://twitter.com/midwestcamp</a></li>
     							<li>Hashtag <a href="https://twitter.com/hashtag/midcamp">#midcamp</a></li>
     							<li>Facebook: <a href="https://www.facebook.com/MidCamp">https://www.facebook.com/MidCamp</a></li>
@@ -170,10 +164,8 @@
     							<dd>Sign up with your Drupal.org account and submit and get notified of events, job postings, trainings, and questions and discussions from group members.</dd>
     							<dt>Slack</dt>
     							<dd>Join the daily conversation on Slack where you can meet and connect with a variety of knowledgeable Druplers from the area.</dd>
-                                <dd style="padding-left:2em;"><a href="https://drupalchicago.slack.com" style="font-weight:bold;">Drupal Chicago Slack</a><br>
-                                    <a href="https://slackinvite.me/to/drupalchicago">Click here and add your email to sign up for Drupal Chicago slack.</a></dd>
                                 <dd style="padding-left:2em;"><a href="https://midcamp.slack.com" style="font-weight:bold;">MidCamp Slack</a><br>
-                                    <a href="https://slackinvite.me/to/midcamp">Click here and add your email to sign up for MidCamp slack.</a></dd>
+                                    <a href="https://midcamp-slack.herokuapp.com/">Click here and add your email to sign up for MidCamp slack.</a></dd>
     							<dt><a href="https://www.drupal.org/irc">IRC</a></dt>
     							<dd><a href="https://www.drupal.org/irc/setting-up">Set up IRC</a> and join the conversation in #midcamp, #cadug, and #cdmug</dd>
     							<dt>Social Media</dt>
