Update Drupal Chicago meetup description.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     						<h2 class="heading-title">Chicago Drupal Meetups</h2>
     						<dl>
     							<dt><a href="http://www.meetup.com/drupalchicago/">Drupal Chicago</a></dt>
-    							<dd>Holds two meetups a month in Chicago, one with presentations, one with an open, discussion format.  Drupal Sprints are scheduled throughout the year.</dd>
+							<dd>Holds a monthly meetup on the first Wednesday of the month. Format varies from presentations to lightning talks to demos to socials. Drupal Sprints and other events are scheduled throughout the year. They also hold (mostly) weekly lunches. See <a href="https://www.meetup.com/drupalchicago/">Drupal Chicago Meetup Group</a> for schedule and location.</dd>
     							<dt><a href="http://www.meetup.com/Fox-Valley-Drupal/">Fox Valley Drupal</a></dt>
     							<dd>This very active meetup groups holds different type of meetups that include presentation, co-working lab time, and social events.</dd>
     						</dl>
