Update MidCamp section for 2020.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     			<div class="row">
     				<div class="col-md-7 col-sm-12 pull-left">
     					<div class="profile-desc wow fadeInRight">
-    						<h2 class="heading-title">MidCamp 2018<br>Midwest Drupal Camp</h2>
-    						<p>We are excited to announce that MidCamp 2018 - Midwest Drupal Camp, will be held March 8th - 11th, 2018 at De Paul University!</p>
+						<h2 class="heading-title">O'MidCamp 2020<br>Midwest Drupal Camp</h2>
+						<p>We are excited to announce that O'MidCamp 2020 - Midwest Drupal Camp, will be held March 18th - 21st, 2020 at De Paul University - Lincoln Park Student Center!</p>
     						<p>For more information, please visit <a href="http://midcamp.org">http://midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
     						<p>We hope to see you there!</p>
     						<ul>
