#6 Replace insecure links with secure links.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <![endif]-->
         <meta property="og:site_name" content="Drupal Chicago" />
         <meta property="og:website" content="company" />
-        <meta property="og:url" content="http://zoomdata.jim.local/home/" />
+        <meta property="og:url" content="https://zoomdata.jim.local/home/" />
         <meta property="og:title" content="Drupal Chicago" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@drupalchicago" />
         <meta name="twitter:site:id" content="561546491" />
         <meta name="twitter:creator" content="@drupalchicago" />
         <meta name="twitter:creator:id" content="43211592" />
-        <meta name="twitter:url" content="http://www.drupalchicago.com" />
+        <meta name="twitter:url" content="https://www.drupalchicago.com" />
         <meta name="twitter:title" content="Drupal Chicago" />
         <meta itemprop="name" content="Drupal Chicago" />
     </head>
@@ -111,9 +111,9 @@
     					<div class="profile-desc wow fadeInRight">
     						<h2 class="heading-title">Chicago Drupal Meetups</h2>
     						<dl>
-    							<dt><a href="http://www.meetup.com/drupalchicago/">Drupal Chicago</a></dt>
+    							<dt><a href="https://www.meetup.com/drupalchicago/">Drupal Chicago</a></dt>
     							<dd>Holds two meetups a month in Chicago, one with presentations, one with an open, discussion format.  Drupal Sprints are scheduled throughout the year.</dd>
-    							<dt><a href="http://www.meetup.com/Fox-Valley-Drupal/">Fox Valley Drupal</a></dt>
+    							<dt><a href="https://www.meetup.com/Fox-Valley-Drupal/">Fox Valley Drupal</a></dt>
     							<dd>This very active meetup groups holds different type of meetups that include presentation, co-working lab time, and social events.</dd>
     						</dl>
     					</div>
@@ -134,10 +134,10 @@
     					<div class="profile-desc wow fadeInRight">
     						<h2 class="heading-title">MidCamp 2018<br>Midwest Drupal Camp</h2>
     						<p>We are excited to announce that MidCamp 2018 - Midwest Drupal Camp, will be held March 8th - 11th, 2018 at De Paul University!</p>
-    						<p>For more information, please visit <a href="http://midcamp.org">http://midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
+    						<p>For more information, please visit <a href="https://midcamp.org">https://midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
     						<p>We hope to see you there!</p>
     						<ul>
-    							<li>Web: <a href="http://midcamp.org">http://midcamp.org</a></li>
+    							<li>Web: <a href="https://midcamp.org">https://midcamp.org</a></li>
     							<li>Twitter: <a href="https://twitter.com/midwestcamp">https://twitter.com/midwestcamp</a></li>
     							<li>Hashtag <a href="https://twitter.com/hashtag/midcamp">#midcamp</a></li>
     							<li>Facebook: <a href="https://www.facebook.com/MidCamp">https://www.facebook.com/MidCamp</a></li>
@@ -248,7 +248,7 @@
         <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
         <script src="js/jquery.sticky.js"></script>
         <script type="text/javascript" src="js/custom.js"></script>
-        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+        <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
     	<script>
     		 $(".main-nav").sticky();
     	</script>
