Update slack links, remove dates, other text updates.

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
     				<div class="col-md-4 col-sm-4 wow fadeInDown" data-wow-delay=".5s">
     					<div class="overview-box">
     						<h3><a href="#section-midcamp">MidCamp<br>Midwest Drupal Camp</a></h3>
-    						<p>Returning to Chicago in March of 2018, MidCamp features 4 days of Training, Sessions, Sprinting, and Community.</p>
+    						<p>Every March, MidCamp features 4 days of Training, Sessions, Sprinting, and Community.</p>
     						<p><a href="#section-midcamp" class="btn btn-default featured">Midcamp ></a></p>
     					</div>
     				</div> <!-- col-md-4 end -->
     				<div class="col-md-4 col-sm-4 wow fadeInDown" data-wow-delay=".7s">
     					<div class="overview-box">
     						<h3 style="padding-bottom:26px;"><a href="#section-community">Online Communities</a></h3>
-    						<p>Connect online with like-minded individuals.  We have Groups, Slacks, and IRCs wher eyou will be able to contribute and seek advise.</p>
+    						<p>Connect online with like-minded individuals.  We have Groups and Slacks where you will be able to contribute and seek advice.</p>
     						<p><a href="#section-community" class="btn btn-default featured">Online ></a></p>
     					</div>
     				</div> <!-- col-md-4 end -->
@@ -112,7 +112,7 @@
     						<h2 class="heading-title">Chicago Drupal Meetups</h2>
     						<dl>
     							<dt><a href="http://www.meetup.com/drupalchicago/">Drupal Chicago</a></dt>
-    							<dd>Holds two meetups a month in Chicago, one with presentations, one with an open, discussion format.  Drupal Sprints are scheduled throughout the year.</dd>
+    							<dd>Holds monthly meetups and more in Chicago.</dd>
     							<dt><a href="http://www.meetup.com/Fox-Valley-Drupal/">Fox Valley Drupal</a></dt>
     							<dd>This very active meetup groups holds different type of meetups that include presentation, co-working lab time, and social events.</dd>
     						</dl>
@@ -132,8 +132,8 @@
     			<div class="row">
     				<div class="col-md-7 col-sm-12 pull-left">
     					<div class="profile-desc wow fadeInRight">
-    						<h2 class="heading-title">MidCamp 2018<br>Midwest Drupal Camp</h2>
-    						<p>We are excited to announce that MidCamp 2018 - Midwest Drupal Camp, will be held March 8th - 11th, 2018 at De Paul University!</p>
+    						<h2 class="heading-title">MidCamp<br>Midwest Drupal Camp</h2>
+    						<p>MidCamp - Midwest Drupal Camp, is held every March at DePaul University!</p>
     						<p>For more information, please visit <a href="http://midcamp.org">http://midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
     						<p>We hope to see you there!</p>
     						<ul>
@@ -165,9 +165,7 @@
     							<dt>Slack</dt>
     							<dd>Join the daily conversation on Slack where you can meet and connect with a variety of knowledgeable Druplers from the area.</dd>
                                 <dd style="padding-left:2em;"><a href="https://midcamp.slack.com" style="font-weight:bold;">MidCamp Slack</a><br>
-                                    <a href="https://midcamp-slack.herokuapp.com/">Click here and add your email to sign up for MidCamp slack.</a></dd>
-    							<dt><a href="https://www.drupal.org/irc">IRC</a></dt>
-    							<dd><a href="https://www.drupal.org/irc/setting-up">Set up IRC</a> and join the conversation in #midcamp, #cadug, and #cdmug</dd>
+                                    <a href="https://mid.camp/slack">Click here and add your email to sign up for MidCamp slack.</a></dd>
     							<dt>Social Media</dt>
     							<dd>Follow everyone you can Social Media, including:
     								<ul>
@@ -234,7 +232,7 @@
     			<div class="row">
     				<div class="col-md-12 text-center">
     					<p>Photos courtesy of <a href="https://www.flickr.com/photos/educowebdesign/">EDUCO Web Design</a> and <a href="https://twitter.com/mrspete">Manning P.</a></p>
-                        <p>Open an <a href="https://github.com/thejimbirch/drupalchicago/issues">issue</a>, or <a href="https://github.com/thejimbirch/drupalchicago">fork this site</a> and make a pull request to request changes.</p>
+                        <p>Open an <a href="https://github.com/midcamp/drupalchicago/issues">issue</a>, or <a href="https://github.com/midcamp/drupalchicago">fork this site</a> and make a pull request to request changes.</p>
     				</div>
     			</div>
     		</div>
