Update slack link

--- a/index.html
+++ b/index.html
@@ -160,11 +160,9 @@
     					<div class="profile-desc wow fadeInRight">
     						<h2 class="heading-title">Online Communities</h2>
     						<dl>
-    							<dt><a href="https://groups.drupal.org/chicago">Drupal Groups - Chicago</a></dt>
-    							<dd>Sign up with your Drupal.org account and submit and get notified of events, job postings, trainings, and questions and discussions from group members.</dd>
     							<dt>Slack</dt>
     							<dd>Join the daily conversation on Slack where you can meet and connect with a variety of knowledgeable Druplers from the area.</dd>
-                                <dd style="padding-left:2em;"><a href="https://midcamp.slack.com" style="font-weight:bold;">MidCamp Slack</a><br>
+                                <dd style="padding-left:2em;"><a href="https://mid.camp/slack" style="font-weight:bold;">MidCamp Slack</a><br>
                                     <a href="https://mid.camp/slack">Click here and add your email to sign up for MidCamp slack.</a></dd>
     							<dt>Social Media</dt>
     							<dd>Follow everyone you can Social Media, including:
@@ -173,7 +171,9 @@
     									<li><a href="https://twitter.com/midwestcamp">@midwestcamp</a></li>
     									<li><a href="https://www.facebook.com/MidCamp">MidCamp on Facebook</a></li>
     								</ul>
-    							</dd>
+								</dd>
+								<dt><a href="https://groups.drupal.org/chicago">Drupal Groups - Chicago</a></dt>
+    							<dd>Sign up with your Drupal.org account and submit and get notified of events, job postings, trainings, and questions and discussions from group members.</dd>
     						</dl>
     					</div>
     				</div>
