Make things a little more timeless

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     				<div class="col-md-4 col-sm-4 wow fadeInDown" data-wow-delay=".5s">
     					<div class="overview-box">
     						<h3><a href="#section-midcamp">MidCamp<br>Midwest Drupal Camp</a></h3>
-    						<p>Every March, MidCamp features 4 days of Training, Sessions, Sprinting, and Community.</p>
+    						<p>Every spring, MidCamp gathers Drupalers for discussions, sessions, contributions, and community.</p>
     						<p><a href="#section-midcamp" class="btn btn-default featured">Midcamp ></a></p>
     					</div>
     				</div> <!-- col-md-4 end -->
@@ -128,7 +128,7 @@
     						<h2 class="heading-title">Chicago Drupal Meetups</h2>
     						<dl>
     							<dt><a href="http://www.meetup.com/drupalchicago/">Drupal Chicago</a></dt>
-							<dd>Drupal Chicago holds a monthly meetup on the first Wednesday of the month, with the format varying from presentations to lightning talks to demos to socials. They also hold (mostly) weekly lunches. See <a href="https://www.meetup.com/drupalchicago/">Drupal Chicago Meetup Group</a> for schedule and location. Drupal Contribution Days and other events are scheduled throughout the year.</dd>
+							<dd>Drupal Chicago holds periodic meetups, with the format varying from presentations to lightning talks to demos to socials. See <a href="https://www.meetup.com/drupalchicago/">Drupal Chicago Meetup Group</a> for schedule and location. Drupal Contribution Days and other events are scheduled throughout the year.</dd>
     							<dt><a href="http://www.meetup.com/Fox-Valley-Drupal/">Fox Valley Drupal</a></dt>
     							<dd>This very active meetup groups holds different type of meetups that include presentation, co-working lab time, and social events.</dd>
     						</dl>
@@ -148,13 +148,14 @@
     			<div class="row">
     				<div class="col-md-7 col-sm-12 pull-left">
     					<div class="profile-desc wow fadeInRight">
-						<h2 class="heading-title">O'MidCamp 2020<br>Midwest Drupal Camp</h2>
-						<p>We are excited to announce that O'MidCamp 2020 - Midwest Drupal Camp, will be held March 18th - 21st, 2020 at De Paul University - Lincoln Park Student Center!</p>
-    						<p>For more information, please visit <a href="http://midcamp.org">http://midcamp.org</a>, subscribe to our email newsletter, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
+						<h2 class="heading-title">MidCamp<br>Midwest Drupal Camp</h2>
+						<p>MidCamp is held annually at DePaul University - Lincoln Park Student Center!</p>
+    						<p>For more information, please visit <a href="https://midcamp.org">https://midcamp.org</a>, subscribe to our <a href="https://us3.list-manage.com/subscribe?u=c8e6dc38970348f0d8c1e7a16&id=12c897b018">email newsletter</a>, and follow us on Twitter - <a href="https://twitter.com/midwestcamp">@midwestcamp</a></p>
     						<p>We hope to see you there!</p>
     						<ul>
     							<li>Web: <a href="https://midcamp.org">https://midcamp.org</a></li>
     							<li>Twitter: <a href="https://twitter.com/midwestcamp">https://twitter.com/midwestcamp</a></li>
+							<li>Mastodon: <a href="https://fosstodon.org/@midcamp">@midcamp@fosstodon.org</a></li>
     							<li>Hashtag <a href="https://twitter.com/hashtag/midcamp">#midcamp</a></li>
     							<li>Facebook: <a href="https://www.facebook.com/MidCamp">https://www.facebook.com/MidCamp</a></li>
     						</ul>
@@ -179,17 +180,17 @@
     							<dt>Slack</dt>
     							<dd>Join the daily conversation on Slack where you can meet and connect with a variety of knowledgeable Druplers from the area.</dd>
                                 <dd style="padding-left:2em;"><a href="https://mid.camp/slack" style="font-weight:bold;">MidCamp Slack</a><br>
-                                    <a href="https://mid.camp/slack">Click here and add your email to sign up for MidCamp slack.</a></dd>
     							<dt>Social Media</dt>
     							<dd>Follow everyone you can Social Media, including:
     								<ul>
     									<li><a href="https://twitter.com/drupalchicago">@drupalchicago</a></li>
+									<li><a href="https://fosstodon.org/@midcamp">@midcamp@fosstodon.org</a>
     									<li><a href="https://twitter.com/midwestcamp">@midwestcamp</a></li>
     									<li><a href="https://www.facebook.com/MidCamp">MidCamp on Facebook</a></li>
     								</ul>
 								</dd>
-								<dt><a href="https://groups.drupal.org/chicago">Drupal Groups - Chicago</a></dt>
-    							<dd>Sign up with your Drupal.org account and submit and get notified of events, job postings, trainings, and questions and discussions from group members.</dd>
+								<dt><a href="https://www.drupal.org/community/events/">Drupal Community Events</a></dt>
+    							<dd>There are Drupal events year-round all across the world. Find the one that works for you!</dd>
     						</dl>
     					</div>
     				</div>
